Revision config et fichiers sass

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <title></title>
 
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/main.css">
 
     <script src="js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 
@@ -29,13 +29,13 @@
 
 <!-- HEADER -->
     <header>
-        <h1></h1>
+        <h1>Header</h1>
     </header>
 <!-- END HEADER -->
  
 <!-- MAIN -->
     <div id="main" role="main">
-
+        <p>Content</p>
     </div>
 <!-- END MAIN -->
 
