--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="js/libs/fancybox/source/jquery.fancybox.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="js/libs/flexslider/flexslider.css" type="text/css" media="screen" />
 
 </head>
 <body>
@@ -36,6 +37,19 @@
     <div id="main" role="main">
         <p>Content</p>
         <a href="http://lorempixel.com/output/cats-q-c-640-480-5.jpg" class="fancybox" title="Sample title"><img src="http://lorempixel.com/output/cats-q-c-640-480-5.jpg" /></a>
+        <div class="flexslider">
+          <ul class="slides">
+            <li>
+              <img src="http://lorempixel.com/output/cats-q-c-640-480-4.jpg" />
+            </li>
+            <li>
+              <img src="http://lorempixel.com/output/cats-q-c-640-480-7.jpg" />
+            </li>
+            <li>
+              <img src="http://lorempixel.com/output/cats-q-c-640-480-1.jpg" />
+            </li>
+          </ul>
+        </div>
     </div>
 <!-- END MAIN -->
 
@@ -46,11 +60,11 @@
 <!-- END FOOTER -->
 
 <!-- javascript and plugins -->
-    <script src="js/libs/jquery/dist/jquery.min.js"></script>
-    <script src="js/libs/fancybox/source/jquery.fancybox.pack.js"></script>
+    <script src="js/plugins.js"></script>
     <script>
         $(document).ready(function() {
             $('.fancybox').fancybox();
+            $('.flexslider').flexslider();
         });
     </script>
 <!-- end javascript and plugins -->
