--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="description" content="Déscription du projet">
+    <meta name="description" content="Description du projet">
     <meta name="viewport" content="width=device-width">
     <meta name="author" content="Philharmonie de Paris" />
     <meta name="HandheldFriendly" content="True" />
@@ -16,7 +16,7 @@
 
     <title></title>
     
-    <link rel="stylesheet" href="css/styles-min.css">
+    <link rel="stylesheet" href="css/styles.css">
 
 </head>
 <body>
@@ -26,28 +26,15 @@
     <![endif]-->
 
 <!-- HEADER -->
-    <header>
-        <h1 id="responsive_headline">Header</h1>
+    <heade r>
+        <h1>Header</h1>
     </header>
 <!-- END HEADER -->
  
 <!-- MAIN -->
     <div id="main" role="main">
         <p>Content</p>
-        <a href="http://lorempixel.com/output/cats-q-c-640-480-5.jpg" class="fancybox" title="Sample title"><img src="http://lorempixel.com/output/cats-q-c-640-480-5.jpg" /></a>
-        <div class="flexslider">
-          <ul class="slides">
-            <li>
-              <img src="http://lorempixel.com/output/cats-q-c-640-480-4.jpg" />
-            </li>
-            <li>
-              <img src="http://lorempixel.com/output/cats-q-c-640-480-7.jpg" />
-            </li>
-            <li>
-              <img src="http://lorempixel.com/output/cats-q-c-640-480-1.jpg" />
-            </li>
-          </ul>
-        </div>
+        <button class="btn btn-primary">VAlider</button>
     </div>
 <!-- END MAIN -->
 
@@ -57,16 +44,9 @@
     </footer>
 <!-- END FOOTER -->
 
-<!-- javascript and plugins -->
-    <script src="js/plugins-min.js"></script>
-    <script>
-        $(document).ready(function() {
-            $('.fancybox').fancybox();
-            $('.flexslider').flexslider();
-            $("#responsive_headline").fitText();
-        });
-    </script>
-<!-- end javascript and plugins -->
+<!-- JAVASCRIPT -->
+    <script src="js/scripts.js"></script>
+<!-- END JAVASCRIPT -->
 
 </body>
 </html>
